--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <br>
         <table>
           <tr>
-            <th><a target="_blank" href="https://github.com/atisharamruttun/Castle-war"><img src="castlewar.png" class="responsive" width="600" height="400" style="border:1px solid grey"></a></th>
+            <th><a target="_blank" href="https://github.com/atisharamruttun/Castle-war"><img src="castlewar.PNG" class="responsive" width="600" height="400" style="border:1px solid grey"></a></th>
             <th><a target="_blank" href="https://github.com/atisharamruttun/Cineworld"><img src="worldcine.PNG" class="responsive" width="600" height="400" style="border:1px solid grey"></a></th>
             <th><a target="_blank" href="https://github.com/devesh-takoor/StarDust---Wedding-Planner"><img src="stardust.png" class="responsive" width="600" height="400" style="border:1px solid grey"></a></th>
           </tr>
